Added variable board sizes from config menu.